--- a/style.css
+++ b/style.css
@@ -30,11 +30,12 @@
         text-align: center;
     }
     .profile-img {
-        width: 150px;
-        height: 150px;
+        width:200px;
+        height:200px;
         border-radius: 50%;
         border: 5px solid #ffffff;
         object-fit: cover;
+        object-position: top;
     }
     .hero-section h1 {
         font-weight: 700;
